--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,13 +1,15 @@
 .about-us-container {
-    width: 1000px;
-    /* margin: 0 auto; */
-    /* padding: 20px; */
-    /* background-color: red; */
+    width: 800px;
+
+    margin: 0 auto;
+    padding: 20px;
+    
+    
     text-align: justify;
   }
   
   .about-us-heading {
-    font-size: 32px;
+   
     font-weight: bold;
     color: #333;
     margin-bottom: 20px;
@@ -16,6 +18,7 @@
   .about-us-description {
     font-size: 18px;
     color: #666;
+
     margin-bottom: 30px;
     text-align: center;
   }
