--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 
 .landing_content {
  margin-top: 430px;
-  margin-left: 100px;
+  margin-left: 200px;
   transform: translate(-50%, -50%);
   z-index: 1;
   text-align: center;
@@ -122,16 +122,20 @@
     height: 100vh;
   }
 
-  .landing_content {
-    margin-top: 100px; /* Adjust as needed */
-    margin-left: 0;
-    width: 80%; /* Adjust as needed */
+  /* .landing_content {
+    margin-top: 100px; 
+    margin-left: 200px;
+
+       
+    width: 80%;
     text-align: center;
-  }
+    
+  } */
 
   .aboutus_container {
-    margin-top: 20px; /* Adjust as needed */
-    width: 80%; /* Adjust as needed */
+    /* margin-top: ;  */
+     
+     width: 80%; 
   }
 }
 
